Fix startup object property issues for VB WinForms. - Don't show an entry for 'My.MyApplication' value. That is only set in the project file but should not be surfaced to the UI. Value should come from the myapp file. - Show correct StartupObject property. Seems like we had 2 properties, one in the base Application.xaml rule and another in the vb-specific Application.xaml rule. Ensured that they have different names and have a visibility condition that would show/hide the correct one, depending on the project language. The only thing missing is to ensure the VB WinForms template contains the correct value in the StartupObject: right now it has 'Sub Main', but should be '[rootnamespace].My.MyApplication'.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/ApplicationPropertyPage.VisualBasic.xaml.de.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/ApplicationPropertyPage.VisualBasic.xaml.de.xlf
@@ -72,14 +72,14 @@
         <target state="translated">Begrüßungsbildschirm</target>
         <note />
       </trans-unit>
-      <trans-unit id="DynamicEnumProperty|StartupObject|Description">
+      <trans-unit id="DynamicEnumProperty|StartupObjectVB|Description">
         <source>Defines the entry point to be called when the application loads. Generally this is set either to the main form in your application or to the 'Main' procedure that should run when the application starts. Class libraries do not define an entry point.</source>
-        <target state="translated">Hiermit wird der Einstiegspunkt definiert, der beim Laden der Anwendung aufgerufen werden soll. Im Allgemeinen wird dies entweder auf das Hauptformular in Ihrer Anwendung oder auf die Main-Prozedur festgelegt, die beim Starten der Anwendung ausgeführt werden soll. Klassenbibliotheken definieren keinen Einstiegspunkt.</target>
+        <target state="new">Defines the entry point to be called when the application loads. Generally this is set either to the main form in your application or to the 'Main' procedure that should run when the application starts. Class libraries do not define an entry point.</target>
         <note />
       </trans-unit>
-      <trans-unit id="DynamicEnumProperty|StartupObject|DisplayName">
+      <trans-unit id="DynamicEnumProperty|StartupObjectVB|DisplayName">
         <source>Startup object</source>
-        <target state="translated">Startobjekt</target>
+        <target state="new">Startup object</target>
         <note />
       </trans-unit>
       <trans-unit id="DynamicEnumProperty|StartupURI|Description">
