Address PR feedback.
Avoid allocating a new list by using List.RemoveAll.
There's no need to have different properties: the VB-specific file replaces the base one and it is only included for VB projects, so we can also remove the visibility condition.
Unfortunately, this reverts the changes that caused the localization files to change but doesn't reset their status to translated.

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/ApplicationPropertyPage.VisualBasic.xaml.ja.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/ApplicationPropertyPage.VisualBasic.xaml.ja.xlf
@@ -72,12 +72,12 @@
         <target state="translated">スプラッシュ スクリーン</target>
         <note />
       </trans-unit>
-      <trans-unit id="DynamicEnumProperty|StartupObjectVB|Description">
+      <trans-unit id="DynamicEnumProperty|StartupObject|Description">
         <source>Defines the entry point to be called when the application loads. Generally this is set either to the main form in your application or to the 'Main' procedure that should run when the application starts. Class libraries do not define an entry point.</source>
         <target state="new">Defines the entry point to be called when the application loads. Generally this is set either to the main form in your application or to the 'Main' procedure that should run when the application starts. Class libraries do not define an entry point.</target>
         <note />
       </trans-unit>
-      <trans-unit id="DynamicEnumProperty|StartupObjectVB|DisplayName">
+      <trans-unit id="DynamicEnumProperty|StartupObject|DisplayName">
         <source>Startup object</source>
         <target state="new">Startup object</target>
         <note />
